# Task_Manager

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: doxygen_crawl.html  index.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
docs/html/search/: all_3.js  all_4.js  all_5.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  pages_0.js  pages_1.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_e.js  searchdata.js
include/: task_manager.h  task_manager.hpp
src/: main.cpp  task_manager.cpp
tests/: CMakeLists.txt  test_task_manager.cpp
